[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/forest/demo-transition-areas/demo-area-2/forest_demo_transition_p2.gd" type="Script" id=1]
[ext_resource path="res://scenes/forest/assets/forest_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/forest/demo-transition-areas/DetectionArea2D.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Node2D"]
position = Vector2( 13, 55 )
script = ExtResource( 1 )

[node name="TileMap_background" type="TileMap" parent="."]
scale = Vector2( 1.5, 1.5 )
tile_set = ExtResource( 2 )
format = 1

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -2024, -94 )
scale = Vector2( 1.5, 1.5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -524225, 13, 0, -524224, 13, 0, -524223, 13, 0, -524222, 13, 0, -524221, 13, 0, -524220, 13, 0, -524219, 13, 0, -458703, 13, 0, -458702, 13, 0, -458701, 13, 0, -458700, 13, 0, -458699, 13, 0, -458698, 13, 0, -458697, 13, 0, -458696, 13, 0, -458695, 13, 0, -458694, 13, 0, -458690, 13, 0, -458689, 13, 0, -458688, 13, 0, -458687, 13, 0, -458686, 13, 0, -458685, 13, 0, -458684, 13, 0, -458683, 13, 0, -458682, 13, 0, -458681, 13, 0, -458680, 13, 0, -393168, 13, 0, -393167, 13, 0, -393166, 13, 0, -393165, 13, 0, -393164, 13, 0, -393163, 13, 0, -393162, 13, 0, -393161, 13, 0, -393160, 13, 0, -393159, 13, 0, -393158, 13, 0, -393157, 13, 0, -393156, 13, 0, -393155, 13, 0, -393154, 13, 0, -393153, 13, 0, -393147, 13, 0, -393146, 13, 0, -393145, 13, 0, -393144, 13, 0, -327633, 13, 0, -327632, 13, 0, -327631, 13, 0, -327624, 13, 0, -327623, 13, 0, -327622, 13, 0, -327621, 13, 0, -327620, 13, 0, -327619, 13, 0, -327618, 13, 0, -327609, 13, 0, -327608, 13, 0, -327607, 13, 0, -262109, 25, 0, -262108, 25, 0, -262107, 25, 0, -262106, 25, 0, -262105, 25, 0, -262104, 25, 0, -262103, 25, 0, -262102, 25, 0, -262101, 25, 0, -262100, 25, 0, -262099, 25, 0, -262098, 25, 0, -262097, 25, 0, -262096, 25, 0, -262095, 13, 0, -262086, 13, 0, -262085, 13, 0, -262084, 13, 0, -262083, 13, 0, -262082, 13, 0, -262073, 25, 0, -262072, 25, 0, -262071, 25, 0, -262070, 25, 0, -262069, 25, 0, -262068, 25, 0, -262067, 25, 0, -262066, 25, 0, -262065, 25, 0, -262064, 25, 0, -262063, 25, 0, -262062, 25, 0, -262061, 25, 0, -262060, 25, 0, -262059, 25, 0, -262058, 25, 0, -262057, 25, 0, -262056, 25, 0, -262055, 25, 0, -262054, 25, 0, -262053, 25, 0, -262052, 25, 0, -262051, 25, 0, -262050, 25, 0, -196573, 25, 0, -196572, 25, 0, -196571, 25, 0, -196570, 25, 0, -196569, 25, 0, -196568, 25, 0, -196567, 25, 0, -196566, 25, 0, -196565, 25, 0, -196564, 25, 0, -196563, 25, 0, -196562, 25, 0, -196561, 25, 0, -196560, 25, 0, -196550, 13, 0, -196549, 13, 0, -196548, 13, 0, -196547, 13, 0, -196546, 13, 0, -196537, 25, 0, -196536, 25, 0, -196535, 25, 0, -196534, 25, 0, -196533, 25, 0, -196532, 25, 0, -196531, 25, 0, -196530, 25, 0, -196529, 25, 0, -196528, 25, 0, -196527, 25, 0, -196526, 25, 0, -196525, 25, 0, -196524, 25, 0, -196523, 25, 0, -196522, 25, 0, -196521, 25, 0, -196520, 25, 0, -196519, 25, 0, -196518, 25, 0, -196517, 25, 0, -196516, 25, 0, -196515, 25, 0, -196514, 25, 0, -131014, 13, 0, -131013, 13, 0, -131012, 13, 0, -131011, 13, 0, -131010, 13, 0, -65478, 13, 0, -65477, 13, 0, -65476, 13, 0, -65475, 13, 0, -65474, 13, 0, 58, 13, 0, 59, 13, 0, 60, 13, 0, 61, 13, 0, 62, 13, 0, 65585, 13, 0, 65586, 13, 0, 65587, 13, 0, 65588, 13, 0, 65589, 13, 0, 65590, 13, 0, 65591, 13, 0, 65592, 13, 0, 65593, 13, 0, 65594, 13, 0, 65595, 13, 0, 65596, 13, 0, 65597, 13, 0, 65598, 13, 0, 65599, 13, 0, 65600, 13, 0, 65601, 13, 0, 65602, 13, 0, 65603, 13, 0, 65604, 13, 0, 65605, 13, 0, 65606, 13, 0, 65607, 13, 0, 65608, 13, 0, 65609, 13, 0, 65610, 13, 0, 65611, 13, 0, 65612, 13, 0, 65613, 13, 0, 65614, 13, 0, 65615, 13, 0, 65616, 13, 0, 65617, 13, 0, 65618, 13, 0, 65619, 13, 0, 65620, 13, 0, 65621, 13, 0, 65622, 13, 0, 65623, 13, 0, 65624, 13, 0, 65625, 13, 0, 65626, 13, 0, 65627, 13, 0, 65628, 13, 0, 65629, 13, 0, 65630, 13, 0, 131107, 18, 0, 131108, 18, 0, 131109, 18, 0, 131110, 18, 0, 131111, 18, 0, 131112, 18, 0, 131113, 18, 0, 131114, 18, 0, 131115, 18, 0, 131116, 18, 0, 131117, 18, 0, 131118, 18, 0, 131119, 18, 0, 131120, 18, 0, 131121, 13, 0, 131122, 13, 0, 131123, 13, 0, 131124, 13, 0, 131125, 13, 0, 131126, 13, 0, 131127, 13, 0, 131128, 13, 0, 131129, 13, 0, 131130, 13, 0, 131131, 13, 0, 131132, 13, 0, 131133, 13, 0, 131134, 13, 0, 131135, 13, 0, 131136, 13, 0, 131137, 13, 0, 131138, 13, 0, 131139, 13, 0, 131140, 13, 0, 131141, 13, 0, 131142, 13, 0, 131143, 13, 0, 131144, 13, 0, 131145, 13, 0, 131146, 13, 0, 131147, 13, 0, 131148, 13, 0, 131149, 13, 0, 131150, 13, 0, 131151, 13, 0, 131152, 13, 0, 131153, 13, 0, 131154, 13, 0, 131155, 13, 0, 131156, 13, 0, 131157, 13, 0, 131158, 13, 0, 131159, 13, 0, 131160, 13, 0, 131161, 13, 0, 131162, 13, 0, 131163, 13, 0, 131164, 13, 0, 131165, 13, 0, 131166, 13, 0, 327715, 18, 0, 327716, 18, 0, 327717, 18, 0, 327718, 18, 0, 327719, 18, 0, 327720, 18, 0, 327721, 18, 0, 327722, 18, 0, 327723, 18, 0, 327724, 18, 0, 327725, 18, 0, 327726, 18, 0, 327727, 18, 0, 327728, 18, 0, 327729, 18, 0, 327730, 18, 0, 327731, 18, 0, 327732, 18, 0, 327733, 18, 0, 327734, 18, 0, 327735, 18, 0, 327736, 18, 0, 327737, 18, 0, 327738, 18, 0, 327739, 18, 0, 327740, 18, 0, 327741, 18, 0, 327742, 18, 0, 327743, 18, 0, 327744, 18, 0, 327745, 18, 0, 327746, 18, 0, 327747, 18, 0, 327748, 18, 0, 327749, 18, 0, 327750, 18, 0, 327751, 18, 0, 327752, 18, 0, 327753, 18, 0, 327754, 18, 0, 327755, 18, 0, 327756, 18, 0, 327757, 18, 0, 327758, 18, 0, 327759, 18, 0, 327760, 18, 0, 327761, 18, 0, 327762, 18, 0, 327763, 18, 0, 327764, 18, 0, 327765, 18, 0, 327766, 18, 0, 327767, 18, 0, 327768, 18, 0, 327769, 18, 0, 327770, 18, 0, 327771, 18, 0, 327772, 18, 0, 327773, 18, 0, 393251, 18, 0, 393252, 18, 0, 393253, 18, 0, 393254, 18, 0, 393255, 18, 0, 393256, 18, 0, 393257, 18, 0, 393258, 18, 0, 393259, 18, 0, 393260, 18, 0, 393261, 18, 0, 393262, 18, 0, 393263, 18, 0, 393264, 18, 0, 393265, 18, 0, 393266, 18, 0, 393267, 18, 0, 393268, 18, 0, 393269, 18, 0, 393270, 18, 0, 393271, 18, 0, 393272, 18, 0, 393273, 18, 0, 393274, 18, 0, 393275, 18, 0, 393276, 18, 0, 393277, 18, 0, 393278, 18, 0, 393279, 18, 0, 393280, 18, 0, 393281, 18, 0, 393282, 18, 0, 393283, 18, 0, 393284, 18, 0, 393285, 18, 0, 393286, 18, 0, 393287, 18, 0, 393288, 18, 0, 393289, 18, 0, 393290, 18, 0, 393291, 18, 0, 393292, 18, 0, 393293, 18, 0, 393294, 18, 0, 393295, 18, 0, 393296, 18, 0, 393297, 18, 0, 393298, 18, 0, 393299, 18, 0, 393300, 18, 0, 393301, 18, 0, 393302, 18, 0, 393303, 18, 0, 393304, 18, 0, 393305, 18, 0, 393306, 18, 0, 393307, 18, 0, 393308, 18, 0, 393309, 18, 0, 458787, 18, 0, 458788, 18, 0, 458789, 18, 0, 458790, 18, 0, 458791, 18, 0, 458792, 18, 0, 458793, 18, 0, 458794, 18, 0, 458795, 18, 0, 458796, 18, 0, 458797, 18, 0, 458798, 18, 0, 458799, 18, 0, 458800, 18, 0, 458801, 18, 0, 458802, 18, 0, 458803, 18, 0, 458804, 18, 0, 458805, 18, 0, 458806, 18, 0, 458807, 18, 0, 458808, 18, 0, 458809, 18, 0, 458810, 18, 0, 458811, 18, 0, 458812, 18, 0, 458813, 18, 0, 458814, 18, 0, 458815, 18, 0, 458816, 18, 0, 458817, 18, 0, 458818, 18, 0, 458819, 18, 0, 458820, 18, 0, 458821, 18, 0, 458822, 18, 0, 458823, 18, 0, 458824, 18, 0, 458825, 18, 0, 458826, 18, 0, 458827, 18, 0, 458828, 18, 0, 458829, 18, 0, 458830, 18, 0, 458831, 18, 0, 458832, 18, 0, 458833, 18, 0, 458834, 18, 0, 458835, 18, 0, 458836, 18, 0, 458837, 18, 0, 458838, 18, 0, 458839, 18, 0, 458840, 18, 0, 458841, 18, 0, 458842, 18, 0, 458843, 18, 0, 458844, 18, 0, 458845, 18, 0, 524323, 18, 0, 524324, 18, 0, 524325, 18, 0, 524326, 18, 0, 524327, 18, 0, 524328, 18, 0, 524329, 18, 0, 524330, 18, 0, 524331, 18, 0, 524332, 18, 0, 524333, 18, 0, 524334, 18, 0, 524335, 18, 0, 524336, 18, 0, 524337, 18, 0, 524338, 18, 0, 524339, 18, 0, 524340, 18, 0, 524341, 18, 0, 524342, 18, 0, 524343, 18, 0, 524344, 18, 0, 524345, 18, 0, 524346, 18, 0, 524347, 18, 0, 524348, 18, 0, 524349, 18, 0, 524350, 18, 0, 524351, 18, 0, 524352, 18, 0, 524353, 18, 0, 524354, 18, 0, 524355, 18, 0, 524356, 18, 0, 524357, 18, 0, 524358, 18, 0, 524359, 18, 0, 524360, 18, 0, 524361, 18, 0, 524362, 18, 0, 524363, 18, 0, 524364, 18, 0, 524365, 18, 0, 524366, 18, 0, 524367, 18, 0, 524368, 18, 0, 524369, 18, 0, 524370, 18, 0, 524371, 18, 0, 524372, 18, 0, 524373, 18, 0, 524374, 18, 0, 524375, 18, 0, 524376, 18, 0, 524377, 18, 0, 524378, 18, 0, 524379, 18, 0, 524380, 18, 0, 524381, 18, 0, 589859, 18, 0, 589860, 18, 0, 589861, 18, 0, 589862, 18, 0, 589863, 18, 0, 589864, 18, 0, 589865, 18, 0, 589866, 18, 0, 589867, 18, 0, 589868, 18, 0, 589869, 18, 0, 589870, 18, 0, 589871, 18, 0, 589872, 18, 0, 589873, 18, 0, 589874, 18, 0, 589875, 18, 0, 589876, 18, 0, 589877, 18, 0, 589878, 18, 0, 589879, 18, 0, 589880, 18, 0, 589881, 18, 0, 589882, 18, 0, 589883, 18, 0, 589884, 18, 0, 589885, 18, 0, 589886, 18, 0, 589887, 18, 0, 589888, 18, 0, 589889, 18, 0, 589890, 18, 0, 589891, 18, 0, 589892, 18, 0, 589893, 18, 0, 589894, 18, 0, 589895, 18, 0, 589896, 18, 0, 589897, 18, 0, 589898, 18, 0, 589899, 18, 0, 589900, 18, 0, 589901, 18, 0, 589902, 18, 0, 589903, 18, 0, 589904, 18, 0, 589905, 18, 0, 589906, 18, 0, 589907, 18, 0, 589908, 18, 0, 589909, 18, 0, 589910, 18, 0, 589911, 18, 0, 589912, 18, 0, 589913, 18, 0, 589914, 18, 0, 589915, 18, 0, 589916, 18, 0, 589917, 18, 0, 655395, 18, 0, 655396, 18, 0, 655397, 18, 0, 655398, 18, 0, 655399, 18, 0, 655400, 18, 0, 655401, 18, 0, 655402, 18, 0, 655403, 18, 0, 655404, 18, 0, 655405, 18, 0, 655406, 18, 0, 655407, 18, 0, 655408, 18, 0, 655409, 18, 0, 655410, 18, 0, 655411, 18, 0, 655412, 18, 0, 655413, 18, 0, 655414, 18, 0, 655415, 18, 0, 655416, 18, 0, 655417, 18, 0, 655418, 18, 0, 655419, 18, 0, 655420, 18, 0, 655421, 18, 0, 655422, 18, 0, 655423, 18, 0, 655424, 18, 0, 655425, 18, 0, 655426, 18, 0, 655427, 18, 0, 655428, 18, 0, 655429, 18, 0, 655430, 18, 0, 655431, 18, 0, 655432, 18, 0, 655433, 18, 0, 655434, 18, 0, 655435, 18, 0, 655436, 18, 0, 655437, 18, 0, 655438, 18, 0, 655439, 18, 0, 655440, 18, 0, 655441, 18, 0, 655442, 18, 0, 655443, 18, 0, 655444, 18, 0, 655445, 18, 0, 655446, 18, 0, 655447, 18, 0, 655448, 18, 0, 655449, 18, 0, 655450, 18, 0, 655451, 18, 0, 655452, 18, 0, 655453, 18, 0 )

[node name="SceneChangeMarkers" type="Node2D" parent="."]

[node name="TopLeftSceneChangePosMarker" type="Position2D" parent="SceneChangeMarkers"]
position = Vector2( -122, -38 )
__meta__ = {
"_edit_group_": true
}

[node name="TopLeftDetectionArea2D" parent="SceneChangeMarkers/TopLeftSceneChangePosMarker" instance=ExtResource( 3 )]
scale = Vector2( 2, 2 )

[node name="BottomLeftSceneChangePosMarker" type="Position2D" parent="SceneChangeMarkers"]
position = Vector2( -124, 102 )
__meta__ = {
"_edit_group_": true
}

[node name="BottomLeftDetectionArea2D" parent="SceneChangeMarkers/BottomLeftSceneChangePosMarker" instance=ExtResource( 3 )]
scale = Vector2( 2, 2 )

[node name="TopRightSceneChangePosMarker" type="Position2D" parent="SceneChangeMarkers"]
position = Vector2( 2384, -75 )
__meta__ = {
"_edit_group_": true
}

[node name="TopRightDetectionArea2D" parent="SceneChangeMarkers/TopRightSceneChangePosMarker" instance=ExtResource( 3 )]
scale = Vector2( 2, 2 )

[node name="BottomRightSceneChangePosMarker" type="Position2D" parent="SceneChangeMarkers"]
position = Vector2( 2391, 100 )
__meta__ = {
"_edit_group_": true
}

[node name="BottomRightDetectionArea2D" parent="SceneChangeMarkers/BottomRightSceneChangePosMarker" instance=ExtResource( 3 )]
scale = Vector2( 2, 2 )

[node name="SpawnMarkers" type="Node2D" parent="."]

[node name="TopLeftSpawn" type="Position2D" parent="SpawnMarkers"]
position = Vector2( -11, -36 )

[node name="BottomLeftSpawn" type="Position2D" parent="SpawnMarkers"]
position = Vector2( -14, 105 )

[node name="TopRightSpawn" type="Position2D" parent="SpawnMarkers"]
position = Vector2( 2296, -73 )

[node name="BottomRightSpawn" type="Position2D" parent="SpawnMarkers"]
position = Vector2( 2299, 97 )

[node name="DefaultSpawn" type="Position2D" parent="."]
position = Vector2( 539, -83 )

[connection signal="body_entered" from="SceneChangeMarkers/TopLeftSceneChangePosMarker/TopLeftDetectionArea2D" to="." method="_on_TopLeftDetectionArea2D_body_entered"]
[connection signal="body_entered" from="SceneChangeMarkers/BottomLeftSceneChangePosMarker/BottomLeftDetectionArea2D" to="." method="_on_BottomLeftDetectionArea2D_body_entered"]
[connection signal="body_entered" from="SceneChangeMarkers/TopRightSceneChangePosMarker/TopRightDetectionArea2D" to="." method="_on_TopRightDetectionArea2D_body_entered"]
[connection signal="body_entered" from="SceneChangeMarkers/BottomRightSceneChangePosMarker/BottomRightDetectionArea2D" to="." method="_on_BottomRightDetectionArea2D_body_entered"]
